fix: Checkstyle issues